--- a/desafios/d12/style.css
+++ b/desafios/d12/style.css
@@ -57,8 +57,13 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--font3);
-    font-size: 3.5vw ;
+    font-size: 3.5 vw ;
 }
+
+section > p{
+    padding-bottom: 2em;
+}
+
 
 section.normal{
     background-color: white;
@@ -74,7 +79,23 @@ section.imagem{
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.24);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: inset 6px 6px 12px 0px black;
+    
+}
+
+section#img01{
+    background-image: url(../d12/imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+    
+ 
+}
+
+
+section#img02{
+    background-image: url(../d12/imagens/background002.jpg);
+    background-position: right center;
 }
 
 
