--- a/modulo_2/ex026/mq002/estilos/style.css
+++ b/modulo_2/ex026/mq002/estilos/style.css
@@ -1,1 +1,23 @@
 @charset "UTF8";
+
+
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+
+h1{
+    color: white;
+    text-shadow: 3 px 3px 0px #152492;
+
+}
