--- a/modulo_2/ex026/mq005/estilos/style.css
+++ b/modulo_2/ex026/mq005/estilos/style.css
@@ -26,7 +26,7 @@ header > h1{
 }
 
 menu{
-    display: block;
+    display: none;
 }
 
 menu > ul{
@@ -65,4 +65,19 @@ article > p {
     text-align: justify;
     margin-bottom: 10px;
     text-indent: 20px;
+}
+
+span#burguer{
+    background-color: rgb(49, 49, 49);
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+    
+}
+
+span#burguer:hover{
+    background-color: white;
+    color: black;
 }
